--- a/linear_model_geneY_ic50.ipynb
+++ b/linear_model_geneY_ic50.ipynb
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We want to predict how sensitive a cancer cell line is to a drug, using the expression level of a single gene (GeneX)."
+        "We want to predict how sensitive a cancer cell line is to a drug, using the expression level of a single gene (GeneY)."
       ],
       "metadata": {
         "id": "LQjLMOSIaCbC"
@@ -64,7 +64,7 @@
         "# Step 2: Create a small synthetic dataset\n",
         "We're simulating a dataset where each cell line has:\n",
         "\n",
-        "An expression value for GeneX (normalized)\n",
+        "An expression value for GeneY (normalized)\n",
         "An experimentally measured IC50 value (lower IC50 = more sensitive to drug)"
       ],
       "metadata": {
