--- a/linear_model_geneY_ic50.ipynb
+++ b/linear_model_geneY_ic50.ipynb
@@ -468,7 +468,7 @@
       "cell_type": "markdown",
       "source": [
         "# Step 3: Visualize the raw data\n",
-        "This helps us explore whether there's a visible trend between GeneX expression and drug response."
+        "This helps us explore whether there's a visible trend between GeneY expression and drug response."
       ],
       "metadata": {
         "id": "GTL7ohxxbJwR"
